--- a/preamble.tex
+++ b/preamble.tex
@@ -116,6 +116,9 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 \usepackage[captionskip=5pt]{floatrow}  % We set caption skip here
 \floatsetup[table]{style=Plaintop,font=small,footnoterule=none,footskip=2.5pt}
 
+% Add ability to show figures rotated
+\usepackage{rotating}
+
 %----------------+
 % Table packages |
 %----------------+
