fix no math environment

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -458,7 +458,7 @@ A full K-Fold Cross Validation pseudo algorithm takes the following form.
  Initialize $\mathcal{A}$ and $\gamma(\cdot)$\;
  \For{ $\alpha \in \mathcal{A}$}{
  \If{data transformation}{
- Perform data transformation on the whole training set \mathcal{T} \;
+ Perform data transformation on the whole training set $\mathcal{T}$ \;
 									 }
  \For{ $k \in \mathcal{K}$}{
  	 \If{feature selection}{
