add figure todos in code

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -794,6 +794,8 @@ The experiment's scores outcomes across their hyperparameter values were graphed
 These compare the cross-validated and training set scores, where, for each hyperparameter value, the $1-F1$ score is graphed as a function of the hyperparameter's value.
 In this way, having a lower score in the graphic means a better model was reached.
 
+\todo{Agrandar estas figuras y separar en su propio.}
+
 \begin{figure}
 \centering
 \begin{minipage}{.5\textwidth}
