--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -5,30 +5,32 @@
 
 
 % The models builds a
-Decision trees are models that can be understood as a tree-like graph, where each node in the tree acts as a binary rule to which any input sample can comply or not. The rules are built as linear (or similar) partitions of input space and they act on the value of a single given feature.
+Decision trees are models that can be understood as a tree-like graph, where each node in the tree acts as a binary decision rule to which any input data sample can comply or not. The rules are built as linear (or similar) partitions over feature space and they act on the value of a single feature, for every sample.
 %properties of the values for each feature.
 
-At any node, the model creates a binary partition of the data by evaluating a sample $s$ in the rule. This decision forwards it to one of the possible output sets by checking if $X_i(s) \in U$ where $X_i$ is the feature used in the node's rule and $U$ is a subset of said feature's space.
+At any node, the model creates a binary partition of the data by evaluating a sample $s$ in the rule. This decision forwards it to one of the possible remaining partitions by checking if $X_i(s) \in U$, where $X_i$ is the feature used in the node's rule and $U$ is a subset of said feature's space.
 
-For numerical features, the input space $X$ will be partitioned into $L$ and $R$ where $L$ of the form $(-\infty,c]$. The value $c \in \mathbb{R}$ is a number predefined by the rule itself. In the same way, for categorical features $L$ will be a subset of the possible categories of that feature.
+For numerical features, the input space $X$ will be partitioned into $L$ and $R$ where $L$ takes the form $(-\infty,c]$. The value $c \in \mathbb{R}$ is a number predefined by the rule itself. In the same way, for categorical features $L$ will be a subset of the possible categories of that feature.
 
-Altogether, a tree defines a partition of feature space in disjoint regions $A_1,\ldots,A_K$ such that the tree's predicted output $\hat{y}$ for a sample $x$ is $c_k$ if the sample belongs to $A_k$. Here $c_k$ is one of the possible values taken by the target variable $y$ in the training set. And by the way trees were built, each $A_k$ is a hyper-rectangles in feature space.
+By iterating this process over more and more nodes, a tree defines a partition of feature space in multiple regions $A_1,\ldots,A_K$. Each region will have an associated value $c_k$ in such a way that the tree's predicted output $\hat{y}$, for a sample $x$, is $c_k$, when the sample belongs to $A_k$. 
+
+Here $c_k$ will be one of the possible values taken by the target variable $y$ in the training set. And by the way trees were built, each $A_k$ is a hyper-rectangle in feature space.
 
 \subsection{Decision Trees Formulation}\label{subsection:decision_trees_formulation}
-In brief, the learner can be characterized by
+In short, the learner can be characterized by the following formula:
 \begin{equation}
 h(X) = \sum_{k=1}^K c_k I(X \in A_k)
 \end{equation}\label{eq:decisionTreeModel}
 
 where $c_k$ is the value that our model estimates for samples in the $A_k$ region. Both of these will have to be learned by the model in the optimization procedure. %by minimizing its loss function
 
-By the points given above, the algorithm needs to determine what is the best way to split a set of samples that flow through a decision node. The \textit{goodness of split} will be measured by the loss metric of the algorithm. Here, the criteria used to decide on node splits are called \textit{node impurity measures}.
+By the principles given above, the algorithm will need to determine an ``optimal''wayto split a set of samples, that flow through a decision node. The \textit{goodness of split} will be measured by specific tree measures called \textit{node impurity measures}.
 %them according, in order to optimize a loss metric.
 
 %at each node
-Most variations for this machine learning model build rules in a greedy fashion, where node impurity measures are locally optimized at each node to decide on which is the best splitting value. The reason for doing this is because not doing so will result in an algorithm whose computational complexity is infeasible. Given that the construction of optimal binary decision trees is NP-Complete~\cite{decisionTreesNP}, the optimal rules for the tree are then fit sequentially.
+Most variations for this machine learning model build rules (tree nodes) in a sequential, greedy, fashion, where node impurity measures are locally optimized at each node to decide on which is the best splitting value. The reason for doing this is because the construction of optimal binary decision trees is NP-Complete~\cite{decisionTreesNP}. Doing otherwise would result in an algorithm whose computational complexity is infeasible. 
 
-In conclusion, at any splitting node we have to find the \textit{best} feature $X^p$ and value split $t$ for which to partition the data in
+At any splitting node we have to find the \textit{best} feature $X^p$ and value split $t$ for which to partition the data in
 $A_L = \{x \in \mathcal{T} \ / \ x^p \leq t \} $ and $A_R = \{x \in \mathcal{T}\ / \ x^p> t \} $. Let $N_l$ and $N_r$ be $|A_L|$ and $|A_R|$ respectively. Then, to quantify the \textit{best} feature for this split the algorithm minimizes:
 
 %\frac{1}{N_{left}}
@@ -63,31 +65,60 @@ To illustrate this method, an instance is show in \cref{fg:rf-treeFigure}. This 
 
 %[.{\textit{M}} ] [.{\textit{F}} ]
 
-\subsection{Node Splitting Criteria \& Hyperparameters}\label{subsection:decision_trees_impurity_measures_hyperparameters}
+\subsection{Impurity Measures}\label{subsection:decision_trees_impurity_measures}
 
 
-The most used metrics to build each rule are the \textit{Gini impurity measure} and the \textit{entropy} or \textit{information gain} criterion. The former optimizes for misclassification error in the two resulting sets. Where it values the accuracy of the model if all samples were to be tagged with the most common target-label in that split. The latter optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Leibler divergence} of the resulting sets with respect to the original set previous to the split.
+The most used metrics to build each rule are the \textit{Gini impurity measure} and the \textit{entropy} or \textit{information gain} criterion. The former minimizes the  misclassification error in the output sets resulting from the partition. It optimizes the accuracy of the model as the resulting value of tagging all resulting samples with the majority label in that partition. 
 
-In this model, the process of iteratively partitioning the samples in splits continues until a predefined tuning parameter limit will stop the optimization or when there is only a single target class for all samples at the node.
+The latter measure optimizes for information entropy, which is analogous to minimizing \textit{Kullback-Leibler divergence} of the resulting sets with respect to the original set previous to the split.
+
+In addition, we have the misclassification measure. Following is listed formulation of the three most used impurity measures for classification trees:
+
+\begin{itemize}
+	\item Gini index: $ \displaystyle \sum_{k\neq k'} \hat{p}_{jk} \hat{p}_{jk'}  = \sum_{k=1}^{K} \hat{p}_{jk} (1 - \hat{p}_{jk}) $
+	\item Cross-entropy: $ \displaystyle \sum_{k=1}^{K} -\log(\hat{p}_{jk})\hat{p}_{jk} $
+	\item Misclassification error: $ \displaystyle \frac{1}{N_j} \sum_{x \in R_j} I(y\neq c_j) = 1 - c_j $
+\end{itemize}
+
+In some cases, a reweighted Gini index can be performant.
+In this version a loss matrix is used to multiply each summands of the measure.
+By this, the matrix reassigns weights to different cases of misclassification and this become specifically practical when we have that a sample from class $k$ incorrectly assigned to class $k'$ is more valuable than other misclassifications.
+
+Let $L \in \mathbb R_{\ge 0}^{K \times K}$ where $L_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$.
+Naturally we will have $L$ as a null diagonal matrix.
+As such, the Gini index's summands will take the reweighed form $L_{kk'} \hat{p}_{jk} \hat{p}_{jk'}$.
+
+For the binary (two class) case these measures can be expressed in simpler terms. If we consider $p$ to be the probability of success, then we have
+
+\begin{itemize}
+\item Misclassification binary error: $1 - \\max(p, 1-p)$
+\item Gini binary index: $ 2p(1-p) $
+\item Binary cross-entropy: $ -\log(p)p - \log(1- p)(1-p) $
+\end{itemize}\label{decisionTreeCostFunctions}
+
+\subsection{Hyperparameters}\label{subsection:decision_trees_hyperparameters}
+
+
+For the decision tree model, the process of iteratively partitioning the samples in splits continues until a predefined tuning parameter stops the optimization or when the node is pure i.e.\ there is only a single target class for all samples at the node.
 
 The hyper-parameters for this model include the length of the tree, the splitting rule threshold and the node impurity measures. From the descriptions previously given, we can list these directly:
 
 \begin{itemize}
-\item Max depth of the tree, or the number of allowed level of splits.
+\item Max depth of the tree, or the allowed levels of splits.
 \item The criteria or measure used to select the best split feature at each node.
-\item The leaf size or the total number of minimum samples allowed per leaf. Note that this is a limit imposed on branch depth.
+\item The leaf size or the total number of minimum samples allowed per leaf. Note that this is a related to limit on branch depth.
 \item Number of features selected to decide on the best split feature at each node.
 \end{itemize}
 
 
 Intuitively, it is natural to find that trees of longer depth will overfit the data since more complex interactions among variables will be captured by refining the partition on input space.
-A trivial case would be to allow a tree to grow fully in depth to later assign to each sample in the training set its own self-contained region.
-This would yield a model with virtually low bias yet with a very high prediction error.
-As we've shown before, this situation produces and overfit model since it will fail to predict correctly on new samples.
+A trivial example is to allow a tree to grow fully in depth to later assign to each sample in the training set its own self-contained region.
+This yields a model with virtually zero bias yet with a very high prediction error.
+In \cref{figure:dtree_overfit_problem_2} we give an example of an overfit decision tree on the CDR dataset for \cref{target2} where the overly-complex model produces poor generalization error. 
 Recall that this was described in \cref{figure:dtree_overfit_problem_2}.
 Here the training scores and CV scores were compared on models with increasing tree depth which at some point started to overfit the training set by increasing the gap of the CV and training errors.
 
-At the same time, having a tree which is too shallow will result in most cases in a biased algorithm.
+At the same time, having a tree which is too shallow in depth will result in most cases in a biased algorithm.
 This is because it results in an overly simple model incapable of correctly assigning labels.
 We must then consider that the depth of a tree is a measure of the model's complexity and as such one of the most important hyperparameters of our model.
 
@@ -97,73 +128,8 @@ This is due to the hierarchical nature of the splits, where errors randomly made
 
 For the reasons described, in this model it is important to control the depth of the trees built.
 The most common method to do this grows a very large tree $T_0$ that will continue until it reaches a depth limit threshold that is very unrestrictive.
-Then the tree will be pruned by removing branches and nodes to remove model complexity with only a slight loss of accuracy.
-
-To expand on the idea of tree complexity control, let $T \subset T_0$ be a subtree of the first tree, where $T$ is obtained by pruning $T_0$. Here the partition regions $R_j$ will be associated to $T$'s terminal nodes or leafs, indexed by $j$, which $j \in \{1,\ldots,|T| \}$.
-
-Given a loss function, and a problem with $K$ possible target classes, we can define the following values:
-\begin{equation}
-\begin{split}
-N_j & = \mid \{x \in R_j \}\mid \\
-\hat{p}_{jk} & = \frac{1}{N_j} \sum_{x \in R_j} I(y=k)\\
-c_j & = argmax_{k} \ \hat{p}_{jk} \\
-\end{split}
-\end{equation}\label{eq:decisionTreePruneParameters}
-
-As we have mentioned before, at each split we use the node impurity measure to quantify this action. Here, we will denote $Q_j(T)$ to be the impurity measure for region $j$. In addition, we list the three most used impurity measures of classification trees:
-
-\begin{itemize}
-\item Misclassification error: $ \displaystyle \frac{1}{N_j} \sum_{x \in R_j} I(y\neq c_j) = 1 - c_j $
-\item Gini index: $ \displaystyle \sum_{k\neq k'} \hat{p}_{jk} \hat{p}_{jk'}  = \sum_{k=1}^{K} \hat{p}_{jk} (1 - \hat{p}_{jk}) $
-\item Cross-entropy: $ \displaystyle \sum_{k=1}^{K} -\log(\hat{p}_{jk})\hat{p}_{jk} $
-\end{itemize}
-
-
-As an extension to the Gini index, it is also common to use a reweighed version of the sum.
-A loss matrix is multiplied to the factors in each summand.
-The matrix is reassigning weights to different cases of misclassification.
-Indeed, these weights become practical when we have that a sample from class $k$ incorrectly assigned to class $k'$ might be less important than other misclassifications.
-
-Let $L \in \mathbb R_{\ge 0}^{K \times K}$ where $L_{(k,k')}$ is the cost of misclassifying a class $k$ sample into $k'$.
-Naturally we have that $L$ is a null diagonal matrix.
-Then the Gini index's summands will take the reweighed form $L_{kk'} \hat{p}_{jk} \hat{p}_{jk'}$.
-
-For the binary (two class) case $Q_j(T)$ can be expressed in simpler terms. If we consider $p$ to be the probability of success, then we have
-
-\begin{itemize}
-\item Misclassification binary error: $1 - \\max(p, 1-p)$
-\item Gini binary index: $ 2p(1-p) $
-\item Binary cross-entropy: $ -\log(p)p - \log(1- p)(1-p) $
-\end{itemize}\label{decisionTreeCostFunctions}
-
-In summary, we will have an impurity measure for each region $R_j$ and the algorithm will then aggregate all of them into a single measure called the \textit{cost complexity criterion}. The idea is that this loss function, as a function of a tree, will control the whole optimization procedure through the tree's parameters. The criterion will be managed to control the final model's bias and variance. We define it in the following way
-
-\begin{equation}
-C_\alpha(T) = \sum_{j=1}^{|T|} N_j Q_j(T) + \alpha|T|
-\end{equation}\label{eq:decisionTreeCostComplexity}
-
-
-Here $\alpha \in \mathbb{R}_{\geq 0}$ is a tuning parameter that values the trade-off between the tree complexity, as given by its depth, and the accuracy of the model as given by the measure we proposed in \cref{decisionTreeCostFunctions}. The idea is that given an $\alpha$ we find the subtree $T_{alpha} \subset T_0$ that minimizes \cref{eq:decisionTreeCostComplexity}.
-
-There are various methods we could use to find the optimal subtree. As an example, here we give an example of the \textit{weakest link pruning} algorithm which goes as follows:
-%must \textit{prune} the initially grown tree
-
-Let $B(T) = \sum_{j} N_j Q_j(T) $ be our pure loss function, without any complexity cost added.~\cite{breiman-cart84} shows that we can find $T_{alpha}$ included in a sequence of trees built for this. This sequence is constructed by iteratively pruning the node $j$ that, when removed from the tree, creates the smallest increase in $B(T)$.
-
-
-% \begin{landscape}%[ht!]
-% %\begin{center}
-% % \includegraphics[width=0.7\columnwidth]{}
-% \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/decision_tree/full_tree_map.png}
-% \caption{ Example of a decision tree which has been pruned to fit the image. This was made on a CV procedure for \cref{target3}.}
-% \label{fig:decision_tree_actual_problem}
-% %\end{center}
-% \end{landscape}
-
-
-In this way, we'll have a sequence of trees $T_0,T_1,\ldots,T_l$ and a sequence of nodes $j_0, j_1,\ldots,j_l$ respectively the ones minimizing the increase in $B(T_0),B(T_1),\ldots,B(T_l)$ at each step. The algorithm will stop when have reached the root node and we will find our tree $T_{alpha}$ by comparing all the $C_\alpha(T)$ for all of the trees built in the sequence. In practice, it is common to have this procedure done within a $K$-fold cross validation routine to reach to an estimated $\hat{\alpha}$.
-
-For a complete explanation of decision trees construction and uses in classification or regression problems, please refer to~\cite{breiman-cart84}.
+Then the tree will be pruned by removing branches and nodes to remove model complexity with only a slight loss of accuracy. More details on this can be seen in \cref{appx:sec:tree_pruning}.
+And for a complete characterization of decision trees and their construction in classification or regression problems, please refer to~\cite{breiman-cart84}.
 
 \subsection{Experiment}\label{subsection:decision_trees_experiment}
 
@@ -172,9 +138,7 @@ In this case the \cref{target2} was used as an example.
 The tree was built using a standard configuration with a low depth of 5 and a Gini splitting criteria.
 All features $X^j$ are available to be chosen at each split and a node has to have at least 20 samples to be split again. The algorithm ran in approximately 15 seconds.
 
-
 \bigskip
-
 
 \begin{sidewaysfigure}
 	\centering
