fix roman numbering in main text

--- a/appendix.tex
+++ b/appendix.tex
@@ -293,7 +293,7 @@ Consensus\footnote{\textcite{hastie-elemstatslearn} P.
 
 \chapter{Ensemble Methods \& Naive Bayes Classifier}\label{appx:ensembleBayes}
 
-\section{Tree Pruning}\label{appx:sec:tree_pruning}
+\section{Decision Tree Pruning}\label{appx:sec:tree_pruning}
 
 Let $T \subset T_0$ be a subtree of the first tree, where $T$ is obtained by pruning $T_0$. Here the partition regions $R_j$ will be associated to $T$'s terminal nodes or leafs, indexed by $j$, which $j \in \{1,\ldots,|T| \}$.
 
