--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,7 @@
   \include{preface}
   \tableofcontents
 
-%  \mainmatter
+\mainmatter
   \include{ch_introduction}
   \include{ch_descriptions_risk}
   \include{ch_machine_learning}
@@ -39,9 +39,9 @@
 
 \backmatter
 	\printbibheading[heading=bibbook]
-	\bibbysection[heading=subbib]
+tm	\bibbysection[heading=subbib]
 	
-\mainmatter
+\frontmatter
 \include{appendix}
   % \printindex
 \end{document}
