add figure todos

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -293,6 +293,7 @@ The experiment's scores outcomes across their hyperparameter values were graphed
 The couple of cross-validated and training set scores where compared, where, for each hyperparameter value, the $1-F1$ score is shown.
 In this way, having a lower score in the graphic means a better model was reached.
 
+\todo{Figures in own environments.}
 \begin{figure}
 \centering
 \begin{minipage}{.5\textwidth}
@@ -758,7 +759,8 @@ The experiment's scores outcomes across their hyperparameter values were graphed
 These compare the cross-validated and training set scores, where, for each hyperparameter value, the $1-F1$ score is graphed as a function of the hyperparameter's value.
 In this way, having a lower score in the graphic means a better model was reached.
 
-\todo{Agrandar estas figuras y separar en su propio.}
+\todo{Figures in own environments.}
+
 
 \begin{figure}
 \centering
