--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -243,7 +243,7 @@ P_{\textbf{x}, \textbf{y} }(mg(\textbf{x},\textbf{y}) <0)
  \end{equation}
 
 almost surely for all sequences of parameters $\Theta_1,\Theta_2, \ldots, \Theta_k,\ldots$
-The proof of this can be found in \cref{appx:sec:rforest_margin_function_convergence}.
+This proof can be found in \cref{appx:sec:rforest_margin_function_convergence}.
 
 
 \subsection{ Comparison to Decision Trees}\label{subsection:random_forests_comparison_trees}
