fix bad $ math env

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -42,7 +42,8 @@ Doing otherwise would result in an algorithm whose computational complexity is i
 At any splitting node we have to find the \textit{best} feature $X^p$ and value split $t$ for which to partition the data in
 $$A_L = \{x \in \mathcal{T} \ / \ x^p \leq t \} $$ 
 and 
-$$A_R = \{x \in \mathcal{T}\ / \ x^p> t \} $. Let $N_l$ and $N_r$ be $|A_L|$ and $|A_R|$$
+$$A_R = \{x \in \mathcal{T}\ / \ x^p> t \} $$. 
+Let $N_l$ and $N_r$ be $|A_L|$ and $|A_R|$
  respectively. 
  Then, to quantify the \textit{best} feature for this split the algorithm minimizes:
 
